refactor function names according to methods
